# backend_lab1

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: __init__.py  views.py
backend/exceptions/: category.py  currency.py  user.py
backend/migrations/versions/: 63c0057171af_.py  77fc8cf6bd8b_.py  e67a7018a6ab_initial_migration.py
backend/models/: category.py  currency.py  record.py  user.py
backend/schemas/: base.py  category.py  currency.py  record.py  user.py
backend/views/: category.py  currency.py  helthcheck.py  record.py  users.py
