[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Roxan1hor333 <Roxan1hor333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
