[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Roxan1hor333 <Roxan1hor333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
black = "^23.9.1"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
flask-jwt-extended = "^4.6.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
